# DiffConvex

./: LICENSE  README.md  convexes.py  reconstruct_mesh.py
diff_convex/: CMakeLists.txt  README.md  pyproject.toml
diff_convex/diff_convex/: CMakeLists.txt  diff_convex.cpp  diff_convex.hpp  diffconvex.cpp
scenes/default/: default.xml
scenes/meshes/: bunny.ply
scripts/: constants.py  geometry.py  io_ply.py  load_xml.py  main.py
